content/assets/style.scss
$spacing: 1.5em;

@font-face {
    font-family: "Linux Libertine";
    src: url("/assets/fonts/LinLibertine_R.woff");
}

@font-face {
    font-family: "Linux Libertine";
    src: url("/assets/fonts/LinLibertine_RB.woff");
    font-weight: bold;
}

@font-face {
    font-family: "Linux Libertine";
    src: url("/assets/fonts/LinLibertine_RI.woff");
    font-style: italic;
}

@font-face {
    font-family: "Linux Libertine";
    src: url("/assets/fonts/LinLibertine_RBI.woff");
    font-weight: bold;
    font-style: italic;
}

@font-face {
    font-family: "Inconsolata";
    src: url("/assets/fonts/Inconsolata.otf");
}

* {
    margin: 0;
    padding: 0;
    font-size: inherit;
}

a {
    text-decoration: none;
    color: blue;
}

a:visited{
    color: darkblue;
}

body {
    margin: 0 auto;
    padding: $spacing;
    max-width: 30em;
    font-family: "Linux Libertine", serif;
    font-size: 1.4em;
    overflow-y: scroll;
    color: #111;
}

code {
    font-family: "Inconsolata", monospace;
}

#header {
    margin-bottom: $spacing;
    text-align: center;
    padding-bottom: 0.5em;
    border-bottom: 3px black solid;
    a {
        display: inline-block;
        color: inherit;
    }
    img {
        vertical-align: middle;
        height: 3em;
        padding: 0.5em;
    }
    ul {
        font-size: 1.2em;
        font-weight: bold;
        display: inline-block;
    }
    li {
        display: inline-block;
        list-style-type: none;
        margin: 0em 0.5em;
    }
    input {
        width: 4em;
        font-family: "Linux Libertine", serif;
    }
}

.article {
    margin-bottom: 2*$spacing;
    p {
        -hyphens: auto;
        -moz-hyphens: auto;
        -o-hyphens: auto;
        -webkit-hyphens: auto;
        -ms-hyphens: auto;
        text-align: justify;
    }
    p, ul, ol, pre, hr, dl, .video, .video43 {
        margin-bottom: 1em;
    }
    h2, h3, h4 {
        margin-top: 1.5em;
        margin-bottom: 0.5em;
    }
    li, pre {
        margin-left: 1em;
    }
    li {
        margin-bottom: 0.5em;
    }
    pre {
        font-size: 0.75em;
        white-space: pre-wrap;
    }
    blockquote {
        margin-left: 1em;
        margin-right: 1em;
        font-style: italic;
    }
    dt {
        font-weight: bold;
    }
    dd {
        margin-left: 1em;
    }
    img {
        max-width: 100%;
        max-height: 25em;
        display: block;
        margin: auto;
    }
    h1 {
        font-size: 2em;
        font-weight: normal;
        letter-spacing: -1px;
        a {
            color: inherit;
        }
    }
    h2 {
        font-size: 1.1em;
    }
    .video, .video43 {
        position: relative;
        height: 0;
        iframe {
            position: absolute;
            top: 0;
            left: 0;
            width: 100%;
            height: 100%;
            border: none;
        }
    }
    .video {
        padding-bottom: 50%; /* 19:9 */
    }
    .video43 {
        padding-bottom: 75%; /* 4:3 */
    }
    .content {
        margin-top: $spacing;
        a {
            text-decoration: underline;
        }
    }
    .meta {
        font-size: 0.8em;
        color: #666;
        a {
            color: inherit;
            text-decoration: none;
        }
    }
}

.more {
    font-size: 1.2em;
    margin-bottom: 1em;
}

#footer {
    font-size: 0.8em;
    border-top: 3px solid black;
    padding-top: 0.5em;
    code {
        display: block;
        margin-top: 1em;
    }
}

